--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.1.1"
+    "version": "4.2.1"
   },
   "dependencies": {
     "co": "^4.6.0",
-    "hexo": "^4.1.1",
+    "hexo": "^4.2.1",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
-    "hexo-generator-json-content": "^4.1.6",
+    "hexo-generator-json-content": "^4.2.3",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-jupyter-notebook": "^0.0.3",
+    "hexo-jupyter-notebook": "0.0.3",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-pug": "^1.0.0",
